Complete MP3 Java Sound SPI